--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint src && flow check",
     "build": "webpack",
     "start": "webpack-dev-server --open",
-    "prepublish": "yarn build"
+    "prepublishOnly": "yarn build"
   },
   "dependencies": {
     "delaunator": "^1.0.4",
